-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template
-bug#0001461: (Data Query) Export/Import fails
-bug#0001479: cli/add_device.php will modify existing devices
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001506: Reindexing fails in snmp.php
-bug#0001508: More min-height'ed divs when showing graphs
-bug#0001522: Special(?) charakters break parsing of template data.
-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
-bug#0001532: Various crashes in early stages of installation with no database populated.
-bug#0001534: IP:PORT Granularity issue in cli/add_device.php
-bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes
-bug#0001549: Database crashes with use of array_to_sql_or
-bug#0001557: Quotes in Text Format graph template field breaks graph
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
-bug#0001600: Default action on lists should be "None"
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0000475: Add RRDTool options currently not settable within Cacti